force-app/main/default/objects/Sync_Log__c/fields/Account_Provider_Practice__c.field-meta.xml
<CustomField>
    <fullName>Account_Provider_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account</description>
    <inlineHelpText>Related Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sync Logs</relationshipLabel>
    <relationshipName>Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>