force-app/main/default/objects/Sync_Log__c/fields/Data_Payload_Json__c.field-meta.xml
<CustomField>
    <fullName>Data_Payload_Json__c</fullName>
    <description>Json with Payload for Sync</description>
    <inlineHelpText>Json with Payload for Sync</inlineHelpText>
    <label>Data Payload (Json)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>