force-app/main/default/objects/Sync_Log__c/fields/External_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Account_ID__c</fullName>
    <description>Account External ID to Match Accounts in VMAP and APAL

ID Identifies when and where the account was created  first.</description>
    <label>Sync Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>