force-app/main/default/objects/Sync_Log__c/fields/LastAttempted__c.field-meta.xml
<CustomField>
    <fullName>LastAttempted__c</fullName>
    <description>Date/Time of last Sync Attempt</description>
    <inlineHelpText>Date/Time of last Sync Attempt</inlineHelpText>
    <label>Last Attempted</label>
    <type>DateTime</type>
</CustomField>