force-app/main/default/objects/Sync_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Number of Retry attempts. Max 3</description>
    <inlineHelpText>Number of Retry attempts. Max 3</inlineHelpText>
    <label>Retry Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>