force-app/main/default/objects/Sync_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stores the detailed execution trace of an error, capturing the sequence of method calls leading to the exception. This field helps in debugging by providing insights into where and why an issue occurred in the code execution flow.</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>