force-app/main/default/objects/Sync_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Sync Status
In Process = New
Complete = Closed/Finish
Retry =  Run Retry attempts
Failed = Stop</description>
    <inlineHelpText>Sync Status
In Process = New
Complete = Closed/Finish
Retry =  Run Retry attempts
Failed = Stop</inlineHelpText>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>