force-app/main/default/objects/Sync_Log__c/fields/Sync_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sync_Direction__c</fullName>
    <description>Direction of Sync: Show where and to what instance sync is initiated.</description>
    <inlineHelpText>Direction of Sync, showing where to what instance sync is initiated.</inlineHelpText>
    <label>Sync Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VMAP</fullName>
                <label>APAL → VMAP</label>
            </value>
            <value>
                <fullName>APAL</fullName>
                <label>VMAP → APAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>