force-app/main/default/objects/Sync_Log__c/fields/Sync_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Sync_Initiator__c</fullName>
    <description>Identifies the user or process that initiated the synchronization.</description>
    <label>Sync Initiator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>