force-app/main/default/objects/Sync_Log__c/fields/Sync_Initiator_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sync_Initiator_Formula__c</fullName>
    <formula>IF(
    ISPICKVAL(Sync_Direction__c, &quot;VMAP&quot;),
    HYPERLINK(&apos;/&apos; &amp; Sync_Initiator_Lookup__c, Sync_Initiator__c, &apos;_self&apos;),
    Sync_Initiator__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync Initiator</label>
    <type>Text</type>
</CustomField>