force-app/main/default/objects/Sync_Log__c/fields/Sync_Initiator_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sync_Initiator_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Initiator Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>