force-app/main/default/objects/Sync_Log__c/fields/Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Type__c</fullName>
    <description>Indicates the type of synchronization operation recorded in the Sync Log. This field helps track whether a record was newly created or updated during the sync process.</description>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>