force-app/main/default/objects/Sync_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Provider_Practice__c</columns>
    <columns>Sync_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Sync_Direction__c</columns>
    <columns>Sync_Initiator_Formula__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>